objects/BMCServiceDesk__BMC_SoftwareServer__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OtherSoftwareServerType__c</fullName>
        <label>Other Software Server Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SoftwareServerType__c</fullName>
        <label>Software Server Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DatabaseServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommunicationServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MessageServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PrintServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SecurityServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TransactionServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ResourceServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TelnetServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTPServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MailServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNSServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDDIServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDAPServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEBServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NewsServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConfigurationMngtAgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebServicesServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BusinessProcessServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SecureShellServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J2EEServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPMessageServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPEnqueueServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPDispatcherServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPGatewayServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPICMServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPJ2EEDispatcher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPSDMServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAPXIIntegrationEngine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>